fix: fix overflow issues in label tooltip
affects: @entur/form

would previously extend indefinitely as label length increased
will now break line appropriately

--- a/packages/form/src/BaseFormControl.scss
+++ b/packages/form/src/BaseFormControl.scss
@@ -195,6 +195,9 @@
     position: relative;
     margin: 0 $space-default;
     line-height: inherit;
+    &--tooltip {
+      position: static;
+    }
     svg {
       top: (0.125rem);
     }
